--- a/Tethys.Xml/Tethys.Xml.csproj
+++ b/Tethys.Xml/Tethys.Xml.csproj
@@ -1,4 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<!-- 
+SPDX-FileCopyrightText: (c) 2022-2023 T. Graf
+SPDX-License-Identifier: Apache-2.0
+-->
+
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFrameworks>netcoreapp3.1;netstandard2.0;net461</TargetFrameworks>
